apps/radarr-deployment.yml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: radarr-deployment
   labels:
     app: radarr
 spec:
   replicas: 1
   selector:
      matchLabels:
        app: radarr
   template:
     metadata:
       labels:
         app: radarr
     spec:
      containers:
         - name: radarr
           image: linuxserver/radarr:version-3.2.2.5080
           ports:
             - containerPort: 7878
           volumeMounts:
             - mountPath: /config
               name: config
               subPath: radarr
             - mountPath: /downloads
               name: media
               subPath: Downloads
             - mountPath: /movies
               name: media
               subPath: Video/Movies
           env:
           - name: PUID
             value: "0"
           - name: PGID
             value: "0"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: local-conf-pvc
        - name: media
          persistentVolumeClaim:
            claimName: nas-media-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: radarr-service
spec:
  selector:
    app: radarr
  ports:
  - protocol: TCP
    port: 7878
    targetPort: 7878
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: radarr.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: radarr-service
            port:
              number: 7878
